--- a/view/css/main.css
+++ b/view/css/main.css
@@ -1,6 +1,6 @@
 body {
 
-	background-color: #ff7700;
+	background-color: #545358;
 
 }
 
@@ -149,7 +149,7 @@ p.account a {
 }
 
 .logo {
-	color: #fff;
+	color: #ff1493;
 	font-size: 34px;
 	line-height: 1;
 }
